--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="navbar">
                 <div class="navbar-brand">
                     <a class="navbar-item" href="/">
-                        <img src="img/logo.png" alt="AD Supplies">
+                        <img src="/img/logo.png" alt="AD Supplies">
                     </a>
 
                     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
