--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                     <li class="md:ml-4 flex-grow">
                         <img src="./img/logo.png" alt="Logo" class="max-w-full" width="100">
                     </li>
-                    <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark" href="#">Home</a></li>
-                    <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark " href="#">Our Services</a></li>
-                    <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark " href="#">Waste
+                    <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark" href="index.html">Home</a></li>
+                    <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark " href="services.html">Our Services</a></li>
+                    <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark " href="waste-management.html">Waste
                             Management</a></li>
-                    <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark " href="#">Blog</a></li>
-                    <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark " href="#">News</a></li>
-                    <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark " href="#">Contact</a></li>
+                    <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark " href="blog.html">Blog</a></li>
+                    <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark " href="news.html">News</a></li>
+                    <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark " href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,40 +37,51 @@
             <div class="container mx-auto py-6 px-4">
                 <h2>Who are we?</h2>
                 <p class="mt-2">
-                AD Supplies aim is to reduce food and associated waste to landfill by making waste management in your
-                business, our business. Our expertise enables us to find ways of effectively recycling your waste
-                streams into biogas and electricity via anaerobic digestion. With over 25 years experience in the food,
-                co-products and the logistics industry, we pride ourselves in our ability to help you reduce cost while
-                improving your company’s green credentials.    
+                    AD Supplies aim is to reduce food and associated waste to landfill by making waste management in
+                    your
+                    business, our business.
                 </p>
                 <p class="mt-2">
-                We can support our clients with bespoke waste management solutions. This includes storage and
-                collection, bulk tanks, skips, IBC’s, drums and dolavs. To make life easier for your business, using
-                telematics is a popular way to manage removal of waste liquids.    
+                    Our expertise enables us to find ways of effectively recycling your waste
+                    streams into biogas and electricity via anaerobic digestion. With over 25 years experience in the
+                    food,
+                    co-products and the logistics industry, we pride ourselves in our ability to help you reduce cost
+                    while
+                    improving your company’s green credentials.
                 </p>
                 <p class="mt-2">
-                We’re licensed waste brokers who believe in good old fashioned customer service. Our goal is to tailor
-                a waste and recycling solution that fits with your needs and puts a STOP to those waste streams going
-                to trade effluent, land fill or land injection. For our partner customers we can also offer a process
-                optimisation service to help reduce waste and improve energy usage.    
+                    We can support our clients with bespoke waste management solutions. This includes storage and
+                    collection, bulk tanks, skips, IBC’s, drums and dolavs. To make life easier for your business,
+                    using
+                    telematics is a popular way to manage removal of waste liquids.
                 </p>
                 <p class="mt-2">
-                Our operations office is at the convenient location of Trafford Docks, Manchester, but our service
-                cover is nationwide.    
+                    We’re licensed waste brokers who believe in good old fashioned customer service. Our goal is to
+                    tailor
+                    a waste and recycling solution that fits with your needs and puts a STOP to those waste streams
+                    going
+                    to trade effluent, land fill or land injection. For our partner customers we can also offer a
+                    process
+                    optimisation service to help reduce waste and improve energy usage.
                 </p>
                 <p class="mt-2">
-                Take the first step in improving your companies green credentials and help clean up the planet. Contact
-                us to see how we can help you today make a cleaner planet tomorrow.    
+                    Our operations office is at the convenient location of Trafford Docks, Manchester, but our service
+                    cover is nationwide.
                 </p>
                 <p class="mt-2">
-                We are AD Supplies, Recycling For Energy … is our passion!
+                    Take the first step in improving your companies green credentials and help clean up the planet.
+                    Contact
+                    us to see how we can help you today make a cleaner planet tomorrow.
+                </p>
+                <p class="mt-2">
+                    We are AD Supplies, Recycling For Energy … is our passion!
                 </p>
             </div>
         </section>
         <section>
             <div class="container mx-auto py-6 px-4 clearfix">
                 <h2>Latest Articles</h2>
-                <div class="md:w-1/2 md:float-left py-6">
+                <div class="md:w-1/2 md:float-left pt-4 md:py-6">
                     <h3>Blog</h3>
                     <article class="w-full py-2">
                         <img src="https:/placehold.it/200" alt="Placeholder">
@@ -81,7 +92,7 @@
                         <a href="#" class="text-grey-darker hover:text-blue-dark">Read article</a>
                     </article>
                 </div>
-                <div class="md:w-1/2 md:float-left py-6">
+                <div class="md:w-1/2 md:float-left pt-4 md:py-6">
                     <h3>News</h3>
                     <article class="w-full py-2">
                         <img src="https:/placehold.it/200" alt="Placeholder">
