--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li class="md:ml-4 flex-grow">
                         <img src="./img/logo.png" alt="Logo" class="max-w-full" width="100">
                     </li>
-                    <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark" href="index.html">Home</a></li>
+                    <li class="md:mr-4"><a class="text-grey-darkest hover:text-blue-dark" href="index.html">Home</a></li>
                     <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark " href="services.html">Our Services</a></li>
                     <li class="md:mr-4"><a class="text-grey-darker hover:text-blue-dark " href="waste-management.html">Waste
                             Management</a></li>
